--- a/public/timing.css
+++ b/public/timing.css
@@ -5,3 +5,9 @@ body {
   padding: 3rem 1.5rem;
   text-align: center;
 }
+@media print {
+  a[href]:after {
+    content: none !important;
+  }
+}
+
